--- a/index.html
+++ b/index.html
@@ -4,133 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Landing Page</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
- 
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background: #f9f9f9;
-      color: #333;
-    }
- 
-    header {
-      background: #2c3e50;
-      color: white;
-      padding: 20px;
-    }
- 
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: auto;
-    }
- 
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
- 
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-    }
- 
-    .menu {
-      display: flex;
-      gap: 20px;
-    }
- 
-    .menu a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-    }
- 
-    .menu-toggle {
-      display: none;
-      cursor: pointer;
-    }
- 
-    .hero {
-      padding: 80px 0;
-      background: #3498db;
-      color: white;
-      text-align: center;
-    }
- 
-    .hero h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
- 
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 30px;
-    }
- 
-    .hero button {
-      padding: 12px 24px;
-      background: white;
-      color: #3498db;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-      border-radius: 5px;
-    }
- 
-    section {
-      padding: 60px 0;
-    }
- 
-    .grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-    }
- 
-    .grid-item {
-      flex: 1 1 250px;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
- 
-    footer {
-      background: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
- 
-    /* Responsividade */
-    @media (max-width: 768px) {
-      .menu {
-        display: none;
-        flex-direction: column;
-        background: #2c3e50;
-        position: absolute;
-        top: 70px;
-        right: 20px;
-        width: 200px;
-        padding: 10px;
-      }
- 
-      .menu.active {
-        display: flex;
-      }
- 
-      .menu-toggle {
-        display: block;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
