PORTIFOLIO DO VINICIUS

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">MinhaMarca</div>
+        <div class="logo">vinilazaro</div>
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <div class="menu" id="menu">
           <a href="#sobre">Sobre</a>
-          <a href="#recursos">Recursos</a>
+          <a href="#habilidade">habilidade</a>
           <a href="#contato">Contato</a>
         </div>
       </nav>
@@ -23,34 +23,38 @@
  
   <section class="hero">
     <div class="container">
-      <h1>Bem-vindo à nossa página</h1>
-      <p>Apresente aqui o seu produto, serviço ou ideia de forma clara e objetiva.</p>
+      <h1>Bem-vindo à minha página</h1>
+      <p>aqui voce vai saber mais sobre mim.</p>
       <button>Saiba Mais</button>
     </div>
   </section>
  
   <section id="sobre">
     <div class="container">
-      <h2>Sobre Nós</h2>
-      <p>Um breve parágrafo sobre o que a empresa faz, sua missão, visão ou diferencial.</p>
+        
+      <h2>SOBRE MIM </h2>
+      <p>veja mais </p>
     </div>
   </section>
  
-  <section id="recursos">
+  <section id=">
     <div class="container">
-      <h2>Recursos</h2>
+      <h2>habilidade </h2>
       <div class="grid">
         <div class="grid-item">
-          <h3>Recurso 1</h3>
-          <p>Descrição breve do recurso.</p>
+          <h3>
+          <p>TRABALHADOR</p>
+
+          
+
         </div>
         <div class="grid-item">
-          <h3>Recurso 2</h3>
-          <p>Descrição breve do recurso.</p>
+          <h3>habilidades</h3>
+          <p>ESFORÇADO .</p>
         </div>
         <div class="grid-item">
-          <h3>Recurso 3</h3>
-          <p>Descrição breve do recurso.</p>
+          <h3>habilidades</h3>
+          <p>RESPONSAVEL.</p>
         </div>
       </div>
     </div>
@@ -59,13 +63,13 @@
   <section id="contato">
     <div class="container">
       <h2>Contato</h2>
-      <p>Email: contato@exemplo.com</p>
-      <p>Telefone: (00) 00000-0000</p>
+      <p>Email: @lazaro1447</p>
+      <p>Telefone: (48) 99845-3985</p>
     </div>
   </section>
  
   <footer>
-    <p>&copy; 2025 MinhaMarca. Todos os direitos reservados.</p>
+    <p>&copy; 2025 vinilazaro. Todos os direitos reservados.</p>
   </footer>
  
   <script>
